Dark mode fixes

--- a/fixed-frontend/src/app/globals.css
+++ b/fixed-frontend/src/app/globals.css
@@ -4,7 +4,9 @@
 
 body {
   background-color: #EAEAEB;
-
+}
+.dark body{
+  background-color: #6B7280;
 }
 
 .banner {
